<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="movie"
            type="org.pandawarrior.popularmovie.data.Movie" />
        <variable
            name="review"
            type="org.pandawarrior.popularmovie.data.MovieReview" />
    </data>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:id="@+id/content_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="org.pandawarrior.popularmovie.ui.detail.MovieDetailActivity"
            tools:showIn="@layout/activity_movie_detail">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:imageUrl="@{movie.posterUrl}" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@{movie.title}"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_favourite"
                    android:layout_weight="1"
                    android:id="@+id/btn_detail_favourite"
                    android:drawableStart="@drawable/ic_star_border_white_24dp"
                    />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_share"
                    android:layout_weight="1"
                    android:id="@+id/btn_detail_share"
                    android:drawableStart="@drawable/ic_share_white_24dp"
                    app:share="@{movie.title}"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_release_date"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                />

            <TextView
                android:id="@+id/movie_release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{movie.releaseDate}"
                android:textAlignment="center"
                android:layout_marginBottom="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_average_vote"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                />

            <TextView
                android:id="@+id/movie_vote_average"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{movie.voteAverage}"
                android:textAlignment="center"
                android:layout_marginBottom="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_plot_synopsis"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:id="@+id/textView" />

            <TextView
                android:id="@+id/movie_plot_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{movie.overview}"
                android:textAlignment="center"
                android:layout_marginBottom="8dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_review"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:id="@+id/review_text" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/movie_user_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_trailers"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:id="@+id/trailer_text" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/movie_video_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>
